# OpenBlanket

./: .clang-format  .gitignore  README  meson.build  meson.options
src/: screensaver.cpp
src/include/: blanket.h  screensaver.h
